Fix Search z-Index

--- a/RecycleMeMVC/Content/Styles/Home/TradeItems.css
+++ b/RecycleMeMVC/Content/Styles/Home/TradeItems.css
@@ -7,9 +7,10 @@ body {
     background-size: 100% 100%;
 }
 
-.recyleCursor{
+.recyleCursor {
     cursor: pointer;
 }
+
 
 .search-box {
     float: right;
@@ -30,8 +31,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     /*padding-top: 55px;*/
-    height:100%;
-
+    height: 100%;
 }
 
 ::-webkit-input-placeholder { /* WebKit browsers */
@@ -55,7 +55,7 @@ body {
 
 .search-box input,
 .search-box .icon {
-    transition-duration: .3s;
+    transition-duration: .5s;
 }
 
 .search-box input {
@@ -75,20 +75,21 @@ body {
     background: transparent;
     border: 2px solid #efefef;
     border-radius: 5px;
-    transition-timing-function: cubic-bezier(0.3, 1.5, 0.6, 1);
+    transition-timing-function: cubic-bezier(0.5, 1.5, 0.6, 1);
 }
 
     .search-box input:focus {
         color: #333;
         border-color: #d6d6d6;
         width: 150%;
+        z-index: 50;
     }
 
         .search-box input:focus ~ .icon {
             opacity: 1;
-            z-index: 3;
+            z-index: 999;
             color: #FFFFFF;
-            margin-right: -60px !important;
+            margin-right: -70px !important;
         }
 
 .search-box .icon {
@@ -96,10 +97,10 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    width: 40px;
+    width: 50px;
     text-align: center;
     line-height: 40px;
-    z-index: 1;
+    z-index: 100;
     cursor: pointer;
     opacity: .5;
     color: #FFFFFF;
